2010-03-13  Kim Grönholm  <kim.gronholm@nomovok.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayer: Opacity change from zero to non-zero doesn't always have effect with AC
        https://bugs.webkit.org/show_bug.cgi?id=36034

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::OpacityAnimationQt::applyFrame):

Canonical link: https://commits.webkit.org/47262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55967 268f45cc-cd09-0410-ab3c-d52691b4dbfc